# mlops_book_recommendation_system

./: .gitattributes  .gitignore  .pre-commit-config.yaml  Makefile  README.md  docker-compose.yaml  pyproject.toml  read_data.ipynb  requirements.txt  run_pylint.sh  token_limiter.py
.github/workflows/: black.yml  lint.yml  pylint.yml
airflow/: airflow.cfg  airflow.db  simple_auth_manager_passwords.json.generated
airflow/config/: airflow.cfg
config/: airflow.cfg
dags/: data_ingestion_workflow.py  recommendation_sys_dag.py
data/: books_1.Best_Books_Ever.csv  open_ai_embeddings.csv
docker/: Dockerfile
mlruns/0/: meta.yaml
mlruns/338839008675069370/: meta.yaml
mlruns/338839008675069370/2c0635e826664097b8a5cb47c363c9b8/: meta.yaml
mlruns/338839008675069370/2c0635e826664097b8a5cb47c363c9b8/tags/: mlflow.runName  mlflow.source.git.commit  mlflow.source.name
scripts/: publish.sh
src/: app.py  clean_data.py  cluster.py  cluster_optimization.py  embeddings.py  faiss_model.py  features.py  kmeans_cluster.py  model_selection.py  read_data.ipynb  recommendations.py  search.py  search_preprocessing.py  testing.ipynb  token_utils.py  utility.py
src/mlops_book_recommendation_system.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/templates/: recommendations.html  search.html  search_result.html
temp/: Dockerfile
tests/: test_clean_data.py
