[project]
name = "mlops-book-recommendation-system"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "jupyter>=1.1.1",
    "mlflow>=3.1.1",
    "numpy>=2.3.1",
    "openai>=1.93.0",
    "pandas>=2.3.0",
    "requests-ratelimiter>=0.7.0",
    "scikit-learn>=1.7.0",
    "tiktoken>=0.9.0",
    "tqdm>=4.67.1",
]
