[project]
name = "mlops-book-recommendation-system"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.39.11",
    "dotenv>=0.9.9",
    "jupyter>=1.1.1",
    "langchain-huggingface>=0.3.0",
    "mlflow>=3.1.1",
    "numpy>=2.3.1",
    "ollama>=0.5.1",
    "openai>=1.93.0",
    "pandas>=2.3.0",
    "pyarrow>=20.0.0",
    "pylint>=3.3.7",
    "scikit-learn>=1.7.0",
    "sentence-transformers>=5.0.0",
]
