[project]
name = "mlops-book-recommendation-system"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "apache-airflow-task-sdk>=1.0.3",
    "black>=25.1.0",
    "boto3>=1.39.11",
    "dotenv>=0.9.9",
    "faiss-cpu>=1.11.0.post1",
    "flask>=3.1.1",
    "flask-session>=0.8.0",
    "isort>=6.0.1",
    "jupyter>=1.1.1",
    "kneed>=0.8.5",
    "langchain-huggingface>=0.3.0",
    "mlflow>=3.1.1",
    "nltk>=3.9.1",
    "numpy>=2.3.1",
    "ollama>=0.5.1",
    "openai>=1.93.0",
    "pandas>=2.3.0",
    "pre-commit>=4.2.0",
    "pyarrow>=20.0.0",
    "pylint>=3.3.7",
    "pytest>=8.4.1",
    "rank-bm25>=0.2.2",
    "scikit-learn>=1.7.0",
    "sentence-transformers>=5.0.0",
]
